# CoreDataValidation

./: .travis.yml  CMakeLists.txt  CoreDataValidation.podspec  NSEntityDescription+DLValidation.h  NSEntityDescription+DLValidation.m  README.md
